--- a/Script/Packages/Urho3D/Package.json
+++ b/Script/Packages/Urho3D/Package.json
@@ -2,7 +2,7 @@
 {
 	"name" : "Urho3D",
 	"namespace" : "Urho3D",
-	"modules" : ["Container", "Math", "Core", "Scene", "Graphics", "Audio",
+	"modules" : ["Script", "Container", "Math", "Core", "Scene", "Graphics", "Audio",
 		"Physics", "Navigation", "Input", "Resource", "Network", "IO", "Engine"],
 		"moduleExclude" : {
 			"WEB" : ["Navigation"],
