CMake: Remove define_dependency_libs() macro

--- a/Source/Urho3D/CMakeLists.txt
+++ b/Source/Urho3D/CMakeLists.txt
@@ -328,6 +328,51 @@ set_output_directories (${OUTPUT_PATH} ARCHIVE LIBRARY)
 if (IOS OR TVOS)
     set (EXCLUDE_FROM_ALL EXCLUDE_FROM_ALL)
 endif ()
+
+if (WIN32)
+    list (APPEND LIBS winmm user32 gdi32 winmm imm32 ole32 oleaut32 version uuid)
+    if (URHO3D_MINIDUMPS)
+        list (APPEND LIBS dbghelp)
+    endif ()
+    if (URHO3D_NETWORK)
+        list (APPEND LIBS ws2_32)
+    endif ()
+elseif (APPLE)
+    list (APPEND LIBS iconv)
+    if (ARM)
+        list (APPEND LIBS "-framework AudioToolbox" "-framework AVFoundation" "-framework CoreAudio" "-framework CoreGraphics" "-framework CoreMotion" "-framework Foundation" "-framework GameController" "-framework OpenGLES" "-framework QuartzCore" "-framework UIKit")
+    else ()
+        list (APPEND LIBS "-framework AudioToolbox" "-framework Carbon" "-framework Cocoa" "-framework CoreFoundation" "-framework SystemConfiguration" "-framework CoreAudio" "-framework CoreServices" "-framework CoreVideo" "-framework ForceFeedback" "-framework IOKit" "-framework OpenGL")
+    endif ()
+elseif (ANDROID)
+    list (APPEND LIBS dl log android)
+else ()
+    # Linux
+    if (NOT WEB)
+        list (APPEND LIBS dl m rt)
+    endif ()
+endif ()
+
+# Graphics
+if (URHO3D_OPENGL)
+    if (APPLE)
+        # Do nothing
+    elseif (WIN32)
+        list (APPEND LIBS opengl32)
+    elseif (ANDROID OR ARM)
+        list (APPEND LIBS GLESv1_CM GLESv2)
+    else ()
+        list (APPEND LIBS GL)
+    endif ()
+elseif (DIRECT3D_LIBRARIES)
+    list (APPEND LIBS ${DIRECT3D_LIBRARIES})
+endif ()
+
+# Database
+if (URHO3D_DATABASE_ODBC)
+    list (APPEND LIBS ${ODBC_LIBRARIES})
+endif ()
+
 setup_library (${URHO3D_LIB_TYPE} ${EXCLUDE_FROM_ALL})
 if (NOT ANDROID AND NOT WEB)
     file (READ .soversion SOVERSION)
@@ -541,6 +586,9 @@ endif ()
 if (ANDROID)
     set (RENAME RENAME Urho3D-${ANDROID_NDK_ABI_NAME}.pc)
 endif ()
+# Make pkg-config script available in a build tree so that using it as SDK works
+file (MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/${DEST_PKGCONFIG_DIR})
+create_symlink (${CMAKE_CURRENT_BINARY_DIR}/Urho3D.pc ${CMAKE_BINARY_DIR}/${DEST_PKGCONFIG_DIR}/Urho3D.pc)
 install (FILES ${CMAKE_CURRENT_BINARY_DIR}/Urho3D.pc DESTINATION ${DEST_PKGCONFIG_DIR} ${RENAME})
 
 # Define post build steps
